force-app/main/default/objects/RIA_Edge__c/RIA_Edge__c.object-meta.xml
<CustomObject>
    <label>RIA Edge</label>
    <pluralLabel>RIA Edges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Edge Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>