force-app/main/default/objects/RIA_Edge__c/fields/From_Node__c.field-meta.xml
<CustomField>
    <fullName>From_Node__c</fullName>
    <label>From Node</label>
    <type>Lookup</type>
    <referenceTo>RIA_Node__c</referenceTo>
    <relationshipLabel>From Edges</relationshipLabel>
    <relationshipName>From_Edges</relationshipName>
    <required>true</required>
</CustomField>