force-app/main/default/objects/RIA_Edge__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>