force-app/main/default/objects/RIA_Edge__c/fields/To_Node__c.field-meta.xml
<CustomField>
    <fullName>To_Node__c</fullName>
    <label>To Node</label>
    <type>Lookup</type>
    <referenceTo>RIA_Node__c</referenceTo>
    <relationshipLabel>To Edges</relationshipLabel>
    <relationshipName>To_Edges</relationshipName>
    <required>true</required>
</CustomField>